abt to do css stuff

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <!-- NOTE: Unmerged edit on my laptop, pls do not add an icon or title tag pls :( -->
+    </head>
+    <body>
+        <!--PLACEHOLDER-->
+    </body>
+</html>
