--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <!-- NOTE: Unmerged edit on my laptop, pls do not add an icon or title tag pls :( -->
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!--PLACEHOLDER-->
