Added pokemon svg

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <!--PLACEHOLDER-->
+        <img id="biglogo" src="images/pokemon_svg.svg">
     </body>
 </html>
