--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <img id="biglogo" src="images/pokemon_svg.svg">
+        <div id="box"></div>
     </body>
 </html>
