started text implement

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     </head>
     <body>
         <img id="biglogo" src="images/pokemon_svg.svg">
-        <div id="box"></div>
+        <div id="box">
+            <p id="out">TEST TEXT</p>
+        </div>
     </body>
 </html>
