too lazy to sync changes from laptop so i wrote them here

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!-- NOTE: Unmerged edit on my laptop, pls do not add an icon or title tag pls :( -->
+        <link rel="icon" href="images/favicon.ico">
         <link rel="stylesheet" href="style.css">
+        <title>Pokemon Text Adventure</title>
     </head>
     <body>
         <img id="biglogo" src="images/pokemon_svg.svg">
