added choices (hidden by default)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
         <img id="biglogo" src="images/pokemon_svg.svg">
         <div id="box">
             <p id="out">TEST TEXT</p>
+            <div id="choices">
+                <button class="littlechoice" id="1"></button>
+                <button class="littlechoice" id="2"></button>
+                <button class="littlechoice" id="3"></button>
+                <button class="littlechoice" id="4"></button>
+                <button class="littlechoice" id="5"></button>
+            </div>
         </div>
     </body>
 </html>
