--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <link rel="icon" href="images/favicon.ico">
         <link rel="stylesheet" href="style.css">
         <title>Pokemon Text Adventure</title>
+        <link rel="stylesheet" href="https://pyscript.net/releases/2024.1.1/core.css" />
+        <script type="module" src="https://pyscript.net/releases/2024.1.1/core.js"></script>
     </head>
     <body>
         <img id="biglogo" src="images/pokemon_svg.svg">
