added python script

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
                 <button class="littlechoice" id="5"></button>
             </div>
         </div>
+        <script type="py" src="./main.py" config="./pyscript.json"></script>
     </body>
 </html>
