--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div id="box">
             <p id="out">TEST TEXT</p>
             <div id="choices">
-                <button class="littlechoice" id="1"></button>
-                <button class="littlechoice" id="2"></button>
-                <button class="littlechoice" id="3"></button>
-                <button class="littlechoice" id="4"></button>
-                <button class="littlechoice" id="5"></button>
+                <button class="littlechoice" id="one"></button>
+                <button class="littlechoice" id="two"></button>
+                <button class="littlechoice" id="three"></button>
+                <button class="littlechoice" id="four"></button>
+                <button class="littlechoice" id="five"></button>
             </div>
         </div>
         <script type="py" src="./main.py" config="./pyscript.json"></script>
