Changed text from "TEST TEXT" to "Loading..."

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <img id="biglogo" src="images/pokemon_svg.svg">
         <div id="box">
-            <p id="out">TEST TEXT</p>
+            <p id="out">Loading...</p>
             <div id="choices">
                 <button class="littlechoice" id="one"></button>
                 <button class="littlechoice" id="two"></button>
