bound buttons to function

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <div id="box">
             <p id="out">Loading...</p>
             <div id="choices">
-                <button class="littlechoice" id="one"></button>
-                <button class="littlechoice" id="two"></button>
-                <button class="littlechoice" id="three"></button>
-                <button class="littlechoice" id="four"></button>
-                <button class="littlechoice" id="five"></button>
+                <button class="littlechoice" id="one" py-onClick="activate_button(1)"></button>
+                <button class="littlechoice" id="two" py-onClick="activate_button(2)"></button>
+                <button class="littlechoice" id="three" py-onClick="activate_button(3)"></button>
+                <button class="littlechoice" id="four" py-onClick="activate_button(4)"></button>
+                <button class="littlechoice" id="five" py-onClick="activate_button(5)"></button>
             </div>
         </div>
         <script type="py" src="./main.py" config="./pyscript.json"></script>
